watcher: make default check timeout equal to check delay